[gd_scene load_steps=15 format=3 uid="uid://bkaein4sck7br"]

[ext_resource type="Script" uid="uid://d4bv33un7647q" path="res://arena_scene.gd" id="1_8k0nb"]
[ext_resource type="Texture2D" uid="uid://bhtclo5nyqtpe" path="res://assets/Lab1.jpg" id="2_2mhd3"]
[ext_resource type="Script" uid="uid://c2et1qbafkdxs" path="res://great_cheese.gd" id="2_bt4xr"]
[ext_resource type="Script" uid="uid://dlhnlcvqg4tdb" path="res://wave_manager.gd" id="3_2mhd3"]
[ext_resource type="Texture2D" uid="uid://x4cpo5pp1mku" path="res://assets/oak_woods_tileset.png" id="3_rhqdc"]
[ext_resource type="PackedScene" uid="uid://y56ga7remamw" path="res://scenes/player/player.tscn" id="4_rhqdc"]
[ext_resource type="Texture2D" uid="uid://cu53q1fwg23m3" path="res://assets/HP/cheese_full.png" id="5_rhqdc"]
[ext_resource type="Texture2D" uid="uid://cwdot6yjj10sx" path="res://assets/HP/Sprite-0003 (1).png" id="8_efdj8"]
[ext_resource type="Texture2D" uid="uid://b0o1utkqcos4h" path="res://assets/HP/Sprite-0001 (1).png" id="9_hhgcq"]
[ext_resource type="Texture2D" uid="uid://xk1edn7b6hr3" path="res://assets/HP/Sprite-0002 (1).png" id="10_4wfwo"]
[ext_resource type="PackedScene" uid="uid://tsi5pgxotxh7" path="res://scenes/ui/user_interface.tscn" id="11_hhgcq"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_agamo"]
texture = ExtResource("3_rhqdc")
0:0/0 = 0
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
15:0/0 = 0
16:0/0 = 0
18:0/0 = 0
19:0/0 = 0
21:0/0 = 0
22:0/0 = 0
23:0/0 = 0
24:0/0 = 0
25:0/0 = 0
26:0/0 = 0
28:0/0 = 0
29:0/0 = 0
30:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
15:1/0 = 0
16:1/0 = 0
18:1/0 = 0
19:1/0 = 0
21:1/0 = 0
22:1/0 = 0
23:1/0 = 0
24:1/0 = 0
25:1/0 = 0
26:1/0 = 0
28:1/0 = 0
29:1/0 = 0
30:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
4:2/0 = 0
5:2/0 = 0
21:2/0 = 0
22:2/0 = 0
23:2/0 = 0
25:2/0 = 0
26:2/0 = 0
28:2/0 = 0
29:2/0 = 0
30:2/0 = 0
0:3/0 = 0
1:3/0 = 0
4:3/0 = 0
5:3/0 = 0
9:3/0 = 0
10:3/0 = 0
15:3/0 = 0
16:3/0 = 0
21:3/0 = 0
22:3/0 = 0
25:3/0 = 0
26:3/0 = 0
28:3/0 = 0
29:3/0 = 0
30:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
21:4/0 = 0
22:4/0 = 0
23:4/0 = 0
24:4/0 = 0
25:4/0 = 0
26:4/0 = 0
28:4/0 = 0
29:4/0 = 0
30:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
7:5/0 = 0
8:5/0 = 0
10:5/0 = 0
11:5/0 = 0
13:5/0 = 0
14:5/0 = 0
16:5/0 = 0
17:5/0 = 0
21:5/0 = 0
22:5/0 = 0
23:5/0 = 0
24:5/0 = 0
25:5/0 = 0
26:5/0 = 0
9:6/0 = 0
10:6/0 = 0
15:6/0 = 0
16:6/0 = 0
2:7/0 = 0
3:7/0 = 0
9:7/0 = 0
10:7/0 = 0
15:7/0 = 0
16:7/0 = 0
22:7/0 = 0
23:7/0 = 0
27:7/0 = 0
27:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
28:7/0 = 0
28:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
29:7/0 = 0
29:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
9:8/0 = 0
10:8/0 = 0
22:8/0 = 0
23:8/0 = 0
27:8/0 = 0
27:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
28:8/0 = 0
28:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
29:8/0 = 0
29:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:9/0 = 0
1:9/0 = 0
4:9/0 = 0
5:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
18:9/0 = 0
19:9/0 = 0
20:9/0 = 0
22:9/0 = 0
23:9/0 = 0
27:9/0 = 0
27:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
28:9/0 = 0
28:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
29:9/0 = 0
29:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
16:10/0 = 0
18:10/0 = 0
19:10/0 = 0
20:10/0 = 0
22:10/0 = 0
23:10/0 = 0
27:10/0 = 0
27:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
28:10/0 = 0
28:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
29:10/0 = 0
29:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
16:11/0 = 0
27:11/0 = 0
27:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
28:11/0 = 0
28:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
29:11/0 = 0
29:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0
16:12/0 = 0
18:12/0 = 0
19:12/0 = 0
20:12/0 = 0
22:12/0 = 0
23:12/0 = 0
24:12/0 = 0
25:12/0 = 0
27:12/0 = 0
27:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
28:12/0 = 0
28:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
29:12/0 = 0
29:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:13/0 = 0
1:13/0 = 0
4:13/0 = 0
5:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
16:13/0 = 0
18:13/0 = 0
19:13/0 = 0
20:13/0 = 0
22:13/0 = 0
23:13/0 = 0
24:13/0 = 0
25:13/0 = 0
27:13/0 = 0
27:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
28:13/0 = 0
28:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
29:13/0 = 0
29:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
13:14/0 = 0
14:14/0 = 0
15:14/0 = 0
16:14/0 = 0
27:14/0 = 0
27:14/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
28:14/0 = 0
28:14/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
29:14/0 = 0
29:14/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
13:15/0 = 0
14:15/0 = 0
15:15/0 = 0
16:15/0 = 0
18:15/0 = 0
19:15/0 = 0
20:15/0 = 0
22:15/0 = 0
23:15/0 = 0
27:15/0 = 0
27:15/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
28:15/0 = 0
28:15/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
29:15/0 = 0
29:15/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:16/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
7:16/0 = 0
8:16/0 = 0
9:16/0 = 0
10:16/0 = 0
11:16/0 = 0
13:16/0 = 0
14:16/0 = 0
15:16/0 = 0
16:16/0 = 0
18:16/0 = 0
19:16/0 = 0
20:16/0 = 0
22:16/0 = 0
23:16/0 = 0
27:16/0 = 0
27:16/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
28:16/0 = 0
28:16/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
29:16/0 = 0
29:16/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:17/0 = 0
1:17/0 = 0
7:17/0 = 0
8:17/0 = 0
9:17/0 = 0
10:17/0 = 0
11:17/0 = 0
22:17/0 = 0
23:17/0 = 0
27:17/0 = 0
27:17/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
28:17/0 = 0
28:17/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
29:17/0 = 0
29:17/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:18/0 = 0
1:18/0 = 0
2:18/0 = 0
3:18/0 = 0
4:18/0 = 0
5:18/0 = 0
27:18/0 = 0
28:18/0 = 0
0:19/0 = 0
1:19/0 = 0
2:19/0 = 0
3:19/0 = 0
4:19/0 = 0
5:19/0 = 0
7:19/0 = 0
8:19/0 = 0
9:19/0 = 0
10:19/0 = 0
11:19/0 = 0
12:19/0 = 0
13:19/0 = 0
14:19/0 = 0
15:19/0 = 0
16:19/0 = 0
17:19/0 = 0
18:19/0 = 0
19:19/0 = 0
20:19/0 = 0
21:19/0 = 0
22:19/0 = 0
24:19/0 = 0
25:19/0 = 0
26:19/0 = 0
27:19/0 = 0
28:19/0 = 0
29:19/0 = 0
30:19/0 = 0
0:20/0 = 0
1:20/0 = 0
2:20/0 = 0
3:20/0 = 0
4:20/0 = 0
5:20/0 = 0
7:20/0 = 0
8:20/0 = 0
9:20/0 = 0
10:20/0 = 0
11:20/0 = 0
12:20/0 = 0
13:20/0 = 0
14:20/0 = 0
15:20/0 = 0
16:20/0 = 0
17:20/0 = 0
18:20/0 = 0
19:20/0 = 0
20:20/0 = 0
21:20/0 = 0
22:20/0 = 0
24:20/0 = 0
25:20/0 = 0
26:20/0 = 0
27:20/0 = 0
28:20/0 = 0
29:20/0 = 0
30:20/0 = 0
0:21/0 = 0
1:21/0 = 0
2:21/0 = 0
7:21/0 = 0
8:21/0 = 0
9:21/0 = 0
10:21/0 = 0
11:21/0 = 0
12:21/0 = 0
13:21/0 = 0
14:21/0 = 0
15:21/0 = 0
16:21/0 = 0
17:21/0 = 0
18:21/0 = 0
19:21/0 = 0
27:21/0 = 0
28:21/0 = 0
29:21/0 = 0
30:21/0 = 0

[sub_resource type="TileSet" id="TileSet_syn64"]
physics_layer_0/collision_layer = 1
physics_layer_0/collision_mask = 2
sources/0 = SubResource("TileSetAtlasSource_agamo")

[sub_resource type="CircleShape2D" id="CircleShape2D_agamo"]
radius = 89.27486

[node name="Arena" type="Node2D"]
script = ExtResource("1_8k0nb")

[node name="Background" type="TextureRect" parent="."]
offset_right = 1920.0
offset_bottom = 1085.0
texture = ExtResource("2_2mhd3")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_syn64")
format = 2
layer_0/tile_data = PackedInt32Array(3997696, 131072, 0, 4063232, 131072, 0, 3997697, 131072, 0, 4063233, 131072, 0, 3997698, 131072, 0, 4063234, 131072, 0, 3997699, 131072, 0, 4063235, 131072, 0, 3997700, 131072, 0, 4063236, 131072, 0, 3997701, 131072, 0, 4063237, 131072, 0, 3997702, 131072, 0, 4063238, 131072, 0, 3997703, 131072, 0, 4063239, 131072, 0, 3997704, 131072, 0, 4063240, 131072, 0, 3997705, 131072, 0, 4063241, 131072, 0, 3997706, 131072, 0, 4063242, 131072, 0, 3997707, 131072, 0, 4063243, 131072, 0, 3997708, 131072, 0, 4063244, 131072, 0, 3997709, 131072, 0, 4063245, 131072, 0, 3997710, 131072, 0, 4063246, 131072, 0, 3997711, 131072, 0, 4063247, 131072, 0, 3997712, 131072, 0, 4063248, 131072, 0, 3997713, 131072, 0, 4063249, 131072, 0, 3997714, 131072, 0, 4063250, 131072, 0, 3997715, 131072, 0, 4063251, 131072, 0, 3997716, 131072, 0, 4063252, 131072, 0, 3997717, 131072, 0, 4063253, 131072, 0, 3997718, 131072, 0, 4063254, 131072, 0, 3997719, 131072, 0, 4063255, 131072, 0, 3997720, 131072, 0, 4063256, 131072, 0, 3997721, 131072, 0, 4063257, 131072, 0, 3997722, 131072, 0, 4063258, 131072, 0, 3997723, 131072, 0, 4063259, 131072, 0, 3997724, 131072, 0, 4063260, 131072, 0, 3997725, 131072, 0, 4063261, 131072, 0, 3997726, 131072, 0, 4063262, 131072, 0, 3997727, 131072, 0, 4063263, 131072, 0, 3997728, 131072, 0, 4063264, 131072, 0, 3997729, 131072, 0, 4063265, 131072, 0, 3997730, 131072, 0, 4063266, 131072, 0, 3997731, 131072, 0, 4063267, 131072, 0, 3997732, 131072, 0, 4063268, 131072, 0, 3997733, 131072, 0, 4063269, 131072, 0, 3997734, 131072, 0, 4063270, 131072, 0, 3997735, 131072, 0, 4063271, 131072, 0, 3997736, 131072, 0, 4063272, 131072, 0, 3997737, 131072, 0, 4063273, 131072, 0, 3997738, 131072, 0, 4063274, 131072, 0, 3997739, 131072, 0, 4063275, 131072, 0, 3997740, 131072, 0, 4063276, 131072, 0, 3997741, 131072, 0, 4063277, 131072, 0, 3997742, 131072, 0, 4063278, 131072, 0, 3997743, 131072, 0, 4063279, 131072, 0, 3997744, 131072, 0, 4063280, 131072, 0, 3997745, 131072, 0, 4063281, 131072, 0, 3997746, 131072, 0, 4063282, 131072, 0, 3997747, 131072, 0, 4063283, 131072, 0, 3997748, 131072, 0, 4063284, 131072, 0, 3997749, 131072, 0, 4063285, 131072, 0, 3997750, 65536, 0, 4063286, 131072, 0, 3997751, 131072, 0, 4063287, 131072, 0, 3997752, 196608, 0, 4063288, 131072, 0, 3997753, 131072, 0, 4063289, 131072, 0, 3997754, 131072, 0, 4063290, 131072, 0, 3997755, 131072, 0, 4063291, 131072, 0, 3997756, 131072, 0, 4063292, 131072, 0, 3997757, 131072, 0, 4063293, 131072, 0, 3997758, 131072, 0, 4063294, 131072, 0, 3997759, 131072, 0, 4063295, 131072, 0, 3997760, 131072, 0, 4063296, 131072, 0, 3997761, 131072, 0, 4063297, 131072, 0, 3997762, 131072, 0, 4063298, 131072, 0, 3997763, 131072, 0, 4063299, 131072, 0, 3997764, 131072, 0, 4063300, 131072, 0, 3997765, 131072, 0, 4063301, 131072, 0, 3997766, 131072, 0, 4063302, 131072, 0, 3997767, 131072, 0, 4063303, 131072, 0, 3997768, 131072, 0, 4063304, 131072, 0, 3997769, 131072, 0, 4063305, 131072, 0, 3997770, 131072, 0, 4063306, 131072, 0, 3997771, 131072, 0, 4063307, 131072, 0, 3997772, 131072, 0, 4063308, 131072, 0, 3997773, 131072, 0, 4063309, 131072, 0, 3997774, 131072, 0, 4063310, 131072, 0, 3997775, 131072, 0, 4063311, 131072, 0, 3997776, 131072, 0, 4063312, 131072, 0, 3997777, 131072, 0, 4063313, 131072, 0, 3997778, 131072, 0, 4063314, 131072, 0, 3997779, 131072, 0, 4063315, 131072, 0, 3997780, 131072, 0, 4063316, 131072, 0, 3997781, 131072, 0, 4063317, 131072, 0, 3997782, 131072, 0, 4063318, 131072, 0, 3997783, 131072, 0, 4063319, 131072, 0, 3997784, 131072, 0, 4063320, 131072, 0, 3997785, 131072, 0, 4063321, 131072, 0, 3997786, 131072, 0, 4063322, 131072, 0, 3997787, 131072, 0, 4063323, 131072, 0, 3997788, 131072, 0, 4063324, 131072, 0, 3997789, 131072, 0, 4063325, 131072, 0, 3997790, 131072, 0, 4063326, 131072, 0, 3997791, 131072, 0, 4063327, 131072, 0, 3997792, 131072, 0, 4063328, 131072, 0, 3997793, 131072, 0, 4063329, 131072, 0, 3997794, 131072, 0, 4063330, 131072, 0, 3997795, 131072, 0, 4063331, 131072, 0, 3997796, 131072, 0, 4063332, 131072, 0, 3997797, 131072, 0, 4063333, 131072, 0, 3997798, 131072, 0, 4063334, 131072, 0, 3997799, 131072, 0, 4063335, 131072, 0, 3997800, 131072, 0, 4063336, 131072, 0, 3997801, 131072, 0, 4063337, 131072, 0, 3997802, 131072, 0, 4063338, 131072, 0, 3997803, 131072, 0, 4063339, 131072, 0, 3997804, 131072, 0, 4063340, 131072, 0, 3997805, 131072, 0, 4063341, 131072, 0, 3997806, 131072, 0, 4063342, 131072, 0, 3997807, 131072, 0, 4063343, 131072, 0, 3997808, 131072, 0, 4063344, 131072, 0, 3997809, 131072, 0, 4063345, 131072, 0, 3997810, 131072, 0, 4063346, 131072, 0, 3997811, 131072, 0, 4063347, 131072, 0, 3997812, 131072, 0, 4063348, 131072, 0, 3997813, 131072, 0, 4063349, 131072, 0, 3997814, 131072, 0, 4063350, 131072, 0, 3997815, 131072, 0, 4063351, 131072, 0, 3211284, 1769472, 7, 3211285, 1835008, 7, 3211286, 1900544, 7, 3211287, 1769472, 7, 3211288, 1835008, 7, 3211289, 1900544, 7, 3211290, 1769472, 7, 3211291, 1835008, 7, 3211292, 1900544, 7, 3211293, 1769472, 7, 3211294, 1835008, 7, 3211295, 1900544, 7, 3211296, 1769472, 7, 3211297, 1835008, 7, 3211298, 1900544, 7, 3211299, 1769472, 7, 3211300, 1835008, 7, 3211301, 1900544, 7, 3211302, 1769472, 7, 3211303, 1835008, 7, 3211304, 1900544, 7, 3211305, 1769472, 7, 3211306, 1835008, 7, 3211307, 1900544, 7, 3276820, 1769472, 9, 3276821, 1769472, 9, 3276822, 1769472, 9, 3276823, 1769472, 9, 3276824, 1769472, 9, 3276825, 1769472, 9, 3276826, 1769472, 9, 3276827, 1769472, 9, 3276828, 1769472, 9, 3276829, 1769472, 9, 3276830, 1769472, 9, 3276831, 1769472, 9, 3276832, 1769472, 9, 3276833, 1769472, 9, 3276834, 1769472, 9, 3276835, 1769472, 9, 3276836, 1769472, 9, 3276837, 1769472, 9, 3276838, 1769472, 9, 3276839, 1769472, 9, 3276840, 1769472, 9, 3276841, 1769472, 9, 3276842, 1769472, 9, 3276843, 1769472, 9, 2359369, 1769472, 9, 2359370, 1769472, 9, 2359371, 1769472, 9, 2359372, 1769472, 9, 2359373, 1769472, 9, 2359374, 1769472, 9, 2359375, 1769472, 9, 2359376, 1769472, 9, 2359377, 1769472, 9, 2359378, 1769472, 9, 2293833, 1769472, 7, 2293834, 1769472, 7, 2293835, 1769472, 7, 2293836, 1769472, 7, 2293837, 1769472, 7, 2293838, 1769472, 7, 2293839, 1769472, 7, 2293840, 1769472, 7, 2293841, 1769472, 7, 2293842, 1769472, 7)

[node name="GreateCheese" type="Area2D" parent="."]
position = Vector2(1216, 948)
collision_layer = 4
collision_mask = 16
script = ExtResource("2_bt4xr")
max_health = 100.0
current_health = 100.0

[node name="Sprite2D" type="Sprite2D" parent="GreateCheese"]
position = Vector2(61.5, -61.5)
scale = Vector2(8.6875, 8.6875)
texture = ExtResource("5_rhqdc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="GreateCheese"]
position = Vector2(58, -71)
shape = SubResource("CircleShape2D_agamo")

[node name="player" parent="." instance=ExtResource("4_rhqdc")]
position = Vector2(993, 971)

[node name="SpawnPoints" type="Node2D" parent="."]
position = Vector2(0, 3)

[node name="SpawnPoint1" type="Marker2D" parent="SpawnPoints"]
position = Vector2(1861, 952)

[node name="SpawnPoint2" type="Marker2D" parent="SpawnPoints"]
position = Vector2(1243, 501)

[node name="SpawnPoint3" type="Marker2D" parent="SpawnPoints"]
position = Vector2(373, 766)

[node name="SpawnPoint4" type="Marker2D" parent="SpawnPoints"]
position = Vector2(20, 941)

[node name="WaveManager" type="Node" parent="."]
script = ExtResource("3_2mhd3")
spawn_points = Array[NodePath]([NodePath("../SpawnPoints/SpawnPoint1"), NodePath("../SpawnPoints/SpawnPoint2"), NodePath("../SpawnPoints/SpawnPoint3"), NodePath("../SpawnPoints/SpawnPoint4")])

[node name="UI" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -583.0
offset_bottom = 141.0
grow_horizontal = 0

[node name="WaveLabel" type="Label" parent="UI/Control"]
layout_mode = 0
offset_left = 13.0
offset_top = 7.0
offset_right = 53.0
offset_bottom = 30.0
text = "100"

[node name="EnemiesLabel" type="Label" parent="UI/Control"]
layout_mode = 0
offset_left = 15.0
offset_top = 45.0
offset_right = 55.0
offset_bottom = 68.0
text = "5"

[node name="TimerLabel" type="Label" parent="UI/Control"]
layout_mode = 0
offset_left = 13.0
offset_top = 84.0
offset_right = 53.0
offset_bottom = 107.0
text = "1000"

[node name="CheeseHealthBar" type="TextureProgressBar" parent="UI/Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -243.0
offset_bottom = 55.0
grow_horizontal = 0
nine_patch_stretch = true
texture_under = ExtResource("8_efdj8")
texture_over = ExtResource("9_hhgcq")
texture_progress = ExtResource("10_4wfwo")

[node name="UserInterface" parent="." instance=ExtResource("11_hhgcq")]
