extends Node2D

@onready var wave_manager = $WaveManager
@onready var great_cheese = $GreateCheese
@onready var tilemap = $TileMap
@onready var spawn_marker = $PlayerSpawn  # –ú–∞—Ä–∫–µ—Ä —Å–ø–∞–≤–Ω–∞ –∏–≥—Ä–æ–∫–∞
@onready var arena_result = $ArenaResult  # –î–û–ë–ê–í–õ–ï–ù–û: —Å—Å—ã–ª–∫–∞ –Ω–∞ —Ä–µ–∑—É–ª—å—Ç–∞—Ç

# UI —ç–ª–µ–º–µ–Ω—Ç—ã
@onready var wave_label: Label = $UI/Control/WaveLabel
@onready var enemies_label: Label = $UI/Control/EnemiesLabel
@onready var timer_label: Label = $UI/Control/TimerLabel
@onready var cheese_health_bar: TextureProgressBar = $UI/Control/CheeseHealthBar

var player: Node = null
var survival_time: float = 0.0
var is_game_active: bool = false
var is_game_over: bool = false
var survival_timer: Timer

func _ready():
	print("üèüÔ∏è –ê—Ä–µ–Ω–∞ –∑–∞–≥—Ä—É–∂–µ–Ω–∞ —Å TileMap!")
	print("üîç –ü—Ä–æ–≤–µ—Ä—è—é —Å—ã—Ä:", great_cheese)
	print("üìç –ü—Ä–æ–≤–µ—Ä—è—é –º–∞—Ä–∫–µ—Ä —Å–ø–∞–≤–Ω–∞:", spawn_marker)
	print("üéØ –ü—Ä–æ–≤–µ—Ä—è—é ArenaResult:", arena_result)
	
	# –û—Ç–ª–∞–¥–æ—á–Ω–∞—è –∏–Ω—Ñ–æ—Ä–º–∞—Ü–∏—è –æ –º–∞—Ä–∫–µ—Ä–µ
	if spawn_marker:
		print("üìç –ú–∞—Ä–∫–µ—Ä —Å–ø–∞–≤–Ω–∞ –Ω–∞–π–¥–µ–Ω, –ø–æ–∑–∏—Ü–∏—è:", spawn_marker.global_position)
	else:
		print("‚ö†Ô∏è –ú–∞—Ä–∫–µ—Ä —Å–ø–∞–≤–Ω–∞ –Ω–µ –Ω–∞–π–¥–µ–Ω!")
		# –°–æ–∑–¥–∞–µ–º –≤—Ä–µ–º–µ–Ω–Ω—ã–π –º–∞—Ä–∫–µ—Ä –≤ —Ü–µ–Ω—Ç—Ä–µ
		_create_fallback_spawn_marker()
	
	# –î–æ–±–∞–≤–ª—è–µ–º –∞—Ä–µ–Ω—É –≤ –≥—Ä—É–ø–ø—É –¥–ª—è –ª–µ–≥–∫–æ–≥–æ –¥–æ—Å—Ç—É–ø–∞
	add_to_group("arena")
	
	# –î–æ–±–∞–≤–ª—è–µ–º UI –≤ –≥—Ä—É–ø–ø—É –¥–ª—è —Å–∫—Ä—ã—Ç–∏—è
	var ui = get_node_or_null("UI")
	if ui:
		ui.add_to_group("arena_ui")
		print("‚úÖ UI –∞—Ä–µ–Ω—ã –¥–æ–±–∞–≤–ª–µ–Ω –≤ –≥—Ä—É–ø–ø—É")
	
	# –ê–≤—Ç–æ–∑–∞–≥—Ä—É–∑–∫–∞ –∏–≥—Ä–æ–∫–∞
	_load_player()
	
	# –ù–∞—Å—Ç—Ä–æ–π–∫–∞ —Å—ã—Ä–∞
	if great_cheese:
		print("üßÄ –°—ã—Ä –Ω–∞–π–¥–µ–Ω –Ω–∞ –∞—Ä–µ–Ω–µ, –ø–æ–¥–∫–ª—é—á–∞–µ–º —Å–∏–≥–Ω–∞–ª—ã...")
		
		# –ü–æ–¥–∫–ª—é—á–∞–µ–º —Å–∏–≥–Ω–∞–ª—ã
		if great_cheese.has_signal("health_changed"):
			great_cheese.health_changed.connect(_on_cheese_health_changed)
		
		if great_cheese.has_signal("destroyed"):
			great_cheese.destroyed.connect(_on_cheese_destroyed)
		else:
			print("‚ùå –°–∏–≥–Ω–∞–ª destroyed –ù–ï –Ω–∞–π–¥–µ–Ω —É —Å—ã—Ä–∞!")
		
		# –£—Å—Ç–∞–Ω–æ–≤–∫–∞ –∑–¥–æ—Ä–æ–≤—å—è —Å—ã—Ä–∞
		cheese_health_bar.max_value = great_cheese.max_health
		cheese_health_bar.value = great_cheese.current_health
	else:
		print("‚ùå –°—ã—Ä –ù–ï –Ω–∞–π–¥–µ–Ω –Ω–∞ –∞—Ä–µ–Ω–µ!")
	
	# –ü—Ä–æ–≤–µ—Ä—è–µ–º —Ç–æ—á–∫–∏ —Å–ø–∞–≤–Ω–∞ –≤—Ä–∞–≥–æ–≤
	var spawn_points = _get_spawn_points()
	print("üìç –ù–∞–π–¥–µ–Ω–æ —Ç–æ—á–µ–∫ —Å–ø–∞–≤–Ω–∞ –≤—Ä–∞–≥–æ–≤:", spawn_points.size())
	
	# –ñ–¥–µ–º 0.5 —Å–µ–∫—É–Ω–¥—ã –∏ –Ω–∞—á–∏–Ω–∞–µ–º –∏–≥—Ä—É
	await get_tree().create_timer(0.5).timeout
	start_game()

func _create_fallback_spawn_marker():
	# –°–æ–∑–¥–∞–µ–º –≤—Ä–µ–º–µ–Ω–Ω—ã–π –º–∞—Ä–∫–µ—Ä –≤ —Ü–µ–Ω—Ç—Ä–µ —ç–∫—Ä–∞–Ω–∞ –µ—Å–ª–∏ –æ—Å–Ω–æ–≤–Ω–æ–π –Ω–µ –Ω–∞–π–¥–µ–Ω
	var viewport_size = get_viewport().get_visible_rect().size
	spawn_marker = Marker2D.new()
	spawn_marker.name = "FallbackSpawnMarker"
	spawn_marker.global_position = viewport_size / 2
	add_child(spawn_marker)
	print("üìç –°–æ–∑–¥–∞–Ω –≤—Ä–µ–º–µ–Ω–Ω—ã–π –º–∞—Ä–∫–µ—Ä –≤ —Ü–µ–Ω—Ç—Ä–µ:", spawn_marker.global_position)

func _load_player():
	# –ò—â–µ–º –∏–≥—Ä–æ–∫–∞ –≤ —Å—Ü–µ–Ω–µ
	player = get_tree().get_first_node_in_group("players")
	
	if not player:
		print("‚ùå –ò–≥—Ä–æ–∫ –Ω–µ –Ω–∞–π–¥–µ–Ω –≤ –≥—Ä—É–ø–ø–µ! –°–æ–∑–¥–∞–µ–º –Ω–æ–≤–æ–≥–æ...")
		var player_scene = preload("res://scenes/player/player.tscn")
		if player_scene:
			player = player_scene.instantiate()
			add_child(player)
			print("‚úÖ –ò–≥—Ä–æ–∫ —Å–æ–∑–¥–∞–Ω –Ω–∞ –∞—Ä–µ–Ω–µ")
	else:
		print("‚úÖ –ò–≥—Ä–æ–∫ –Ω–∞–π–¥–µ–Ω –Ω–∞ –∞—Ä–µ–Ω–µ")
	
	# –ü–æ–∑–∏—Ü–∏–æ–Ω–∏—Ä—É–µ–º –∏–≥—Ä–æ–∫–∞
	_position_player()

func _position_player():
	if not player:
		print("‚ö†Ô∏è –ù–µ –º–æ–≥—É –ø–æ–∑–∏—Ü–∏–æ–Ω–∏—Ä–æ–≤–∞—Ç—å –∏–≥—Ä–æ–∫–∞ - player –æ—Ç—Å—É—Ç—Å—Ç–≤—É–µ—Ç")
		return
	
	# –ò—Å–ø–æ–ª—å–∑—É–µ–º –º–∞—Ä–∫–µ—Ä —Å–ø–∞–≤–Ω–∞
	if spawn_marker:
		player.global_position = spawn_marker.global_position
		print("üéÆ –ò–≥—Ä–æ–∫ —Ä–∞–∑–º–µ—â–µ–Ω –Ω–∞ –º–∞—Ä–∫–µ—Ä–µ —Å–ø–∞–≤–Ω–∞:", player.global_position)
	else:
		# –ó–∞–ø–∞—Å–Ω–æ–π –≤–∞—Ä–∏–∞–Ω—Ç - —Ü–µ–Ω—Ç—Ä —ç–∫—Ä–∞–Ω–∞
		var viewport_center = get_viewport().get_visible_rect().size / 2
		player.global_position = viewport_center
		print("üéÆ –ò–≥—Ä–æ–∫ —Ä–∞–∑–º–µ—â–µ–Ω –≤ —Ü–µ–Ω—Ç—Ä–µ —ç–∫—Ä–∞–Ω–∞:", player.global_position)

func _get_spawn_points() -> Array:
	var points = []
	var spawn_container = $SpawnPoints
	if spawn_container:
		for child in spawn_container.get_children():
			if child is Marker2D:
				points.append(child.global_position)
	return points

func start_game():
	print("üéÆ –ò–≥—Ä–∞ –Ω–∞—á–∞–ª–∞—Å—å –Ω–∞ –∞—Ä–µ–Ω–µ!")
	is_game_active = true
	is_game_over = false
	
	# –í–æ—Å—Å—Ç–∞–Ω–∞–≤–ª–∏–≤–∞–µ–º —Å—ã—Ä –∏–≥—Ä–æ–∫—É –ø—Ä–∏ —Å—Ç–∞—Ä—Ç–µ –∞—Ä–µ–Ω—ã
	if player:
		# –í–æ—Å—Å—Ç–∞–Ω–∞–≤–ª–∏–≤–∞–µ–º —Å—ã—Ä
		if player.has_method("restore_all_cheese_to_full"):
			player.restore_all_cheese_to_full()
			print("üßÄ –°—ã—Ä –≤–æ—Å—Å—Ç–∞–Ω–æ–≤–ª–µ–Ω –ø—Ä–∏ —Å—Ç–∞—Ä—Ç–µ –∞—Ä–µ–Ω—ã")
		
		# –í–æ—Å—Å—Ç–∞–Ω–∞–≤–ª–∏–≤–∞–µ–º –∑–¥–æ—Ä–æ–≤—å–µ
		if player.has_method("heal_to_full"):
			player.heal_to_full()
			print("‚ù§Ô∏è –ó–¥–æ—Ä–æ–≤—å–µ –≤–æ—Å—Å—Ç–∞–Ω–æ–≤–ª–µ–Ω–æ –ø—Ä–∏ —Å—Ç–∞—Ä—Ç–µ –∞—Ä–µ–Ω—ã")
	
	# –°–æ–∑–¥–∞–µ–º —Ç–∞–π–º–µ—Ä –≤—ã–∂–∏–≤–∞–Ω–∏—è
	survival_timer = Timer.new()
	add_child(survival_timer)
	survival_timer.wait_time = 1.0
	survival_timer.timeout.connect(_update_survival_timer)
	survival_timer.start()
	
	# –ó–∞–ø—É—Å–∫–∞–µ–º –≤–æ–ª–Ω—ã
	if wave_manager and wave_manager.has_method("start_waves"):
		wave_manager.start_waves()
		print("üåä –í–æ–ª–Ω—ã –∑–∞–ø—É—â–µ–Ω—ã")
	
	# –û–±–Ω–æ–≤–ª—è–µ–º UI
	_update_ui()

func _update_survival_timer():
	if not is_game_active:
		return
	
	survival_time += 1.0
	
	# –§–æ—Ä–º–∞—Ç–∏—Ä—É–µ–º –≤—Ä–µ–º—è
	var minutes = int(survival_time) / 60
	var seconds = int(survival_time) % 60
	
	if timer_label:
		timer_label.text = "–í—Ä–µ–º—è: %02d:%02d" % [minutes, seconds]
	
	if wave_manager:
		if wave_manager.has_method("get_enemies_alive"):
			var enemies_alive = wave_manager.get_enemies_alive()
			if enemies_label:
				enemies_label.text = "–í—Ä–∞–≥–æ–≤: " + str(enemies_alive)
		
		if wave_manager.has_method("get_current_wave"):
			var current_wave = wave_manager.get_current_wave()
			if wave_label:
				wave_label.text = "–í–æ–ª–Ω–∞: " + str(current_wave)

func _update_ui():
	if wave_manager:
		if wave_manager.has_method("get_current_wave"):
			var wave = wave_manager.get_current_wave()
			if wave_label:
				wave_label.text = "–í–æ–ª–Ω–∞: " + str(wave)
		
		if wave_manager.has_method("get_enemies_alive"):
			var enemies = wave_manager.get_enemies_alive()
			if enemies_label:
				enemies_label.text = "–í—Ä–∞–≥–æ–≤: " + str(enemies)

func _on_cheese_health_changed(current: float, max_hp: float):
	print("üßÄ –ó–¥–æ—Ä–æ–≤—å–µ —Å—ã—Ä–∞:", current, "/", max_hp)
	
	if cheese_health_bar:
		cheese_health_bar.max_value = max_hp
		cheese_health_bar.value = current
		
		var percent = current / max_hp
		if percent > 0.6:
			cheese_health_bar.tint_progress = Color(0.2, 1.0, 0.2)
		elif percent > 0.3:
			cheese_health_bar.tint_progress = Color(1.0, 0.8, 0.2)
		else:
			cheese_health_bar.tint_progress = Color(1.0, 0.2, 0.2)
			
			var tween = create_tween()
			tween.tween_property(cheese_health_bar, "modulate:a", 0.5, 0.3)
			tween.tween_property(cheese_health_bar, "modulate:a", 1.0, 0.3)

func _on_cheese_destroyed():
	print("üíÄ –°–∏–≥–Ω–∞–ª: –°—ã—Ä —É–Ω–∏—á—Ç–æ–∂–µ–Ω! (–ø–æ–ª—É—á–µ–Ω –∞—Ä–µ–Ω–æ–π)")
	_end_game("–°—ã—Ä —É–Ω–∏—á—Ç–æ–∂–µ–Ω!")

func _end_game(reason: String):
	# –ó–∞—â–∏—Ç–∞ –æ—Ç –ø–æ–≤—Ç–æ—Ä–Ω—ã—Ö –≤—ã–∑–æ–≤–æ–≤
	if is_game_over:
		print("‚ö†Ô∏è –ò–≥—Ä–∞ —É–∂–µ –∑–∞–≤–µ—Ä—à–µ–Ω–∞, –∏–≥–Ω–æ—Ä–∏—Ä—É–µ–º –ø–æ–≤—Ç–æ—Ä–Ω—ã–π –≤—ã–∑–æ–≤")
		return
	
	print("üõë –ù–∞—á–∏–Ω–∞–µ–º –∑–∞–≤–µ—Ä—à–µ–Ω–∏–µ –∏–≥—Ä—ã:", reason)
	is_game_active = false
	is_game_over = true
	
	# –û—Å—Ç–∞–Ω–∞–≤–ª–∏–≤–∞–µ–º —Ç–∞–π–º–µ—Ä
	if survival_timer:
		survival_timer.stop()
		print("‚èπÔ∏è –¢–∞–π–º–µ—Ä –æ—Å—Ç–∞–Ω–æ–≤–ª–µ–Ω")
	
	# –û—Å—Ç–∞–Ω–∞–≤–ª–∏–≤–∞–µ–º –≤–æ–ª–Ω—ã
	if wave_manager and wave_manager.has_method("stop_waves"):
		wave_manager.stop_waves()
		print("‚èπÔ∏è –í–æ–ª–Ω—ã –æ—Å—Ç–∞–Ω–æ–≤–ª–µ–Ω—ã")
	
	print("üõë –ò–≥—Ä–∞ –æ–∫–æ–Ω—á–µ–Ω–∞:", reason, " –í—Ä–µ–º—è:", survival_time, "—Å")
	
	# –û—Å—Ç–∞–Ω–∞–≤–ª–∏–≤–∞–µ–º –≤—Å–µ—Ö –≤—Ä–∞–≥–æ–≤
	_stop_all_enemies()
	
	# –û—Å—Ç–∞–Ω–∞–≤–ª–∏–≤–∞–µ–º –∏–≥—Ä–æ–∫–∞
	if player and player.has_method("set_can_move"):
		player.set_can_move(false)
		print("‚èπÔ∏è –î–≤–∏–∂–µ–Ω–∏–µ –∏–≥—Ä–æ–∫–∞ –æ—Å—Ç–∞–Ω–æ–≤–ª–µ–Ω–æ")
	
	# –°–æ—Ö—Ä–∞–Ω—è–µ–º –∏–≥—Ä—É
	if player:
		print("üíæ –°–æ—Ö—Ä–∞–Ω—è–µ–º –∏–≥—Ä—É...")
		player.save_without_restore()
	
	# –ü–æ–∫–∞–∑—ã–≤–∞–µ–º —Å–æ–æ–±—â–µ–Ω–∏–µ
	_show_game_over_message(reason)
	
	# –ñ–¥–µ–º 2 —Å–µ–∫—É–Ω–¥—ã –∏ –ø–æ–∫–∞–∑—ã–≤–∞–µ–º —Ä–µ–∑—É–ª—å—Ç–∞—Ç—ã
	print("‚è≥ –ñ–¥–µ–º 2 —Å–µ–∫—É–Ω–¥—ã –ø–µ—Ä–µ–¥ –ø–æ–∫–∞–∑–æ–º —Ä–µ–∑—É–ª—å—Ç–∞—Ç–æ–≤...")
	await get_tree().create_timer(2.0).timeout
	
	_show_results_screen()

func _show_game_over_message(reason: String):
	var message_text = ""
	if reason == "–°—ã—Ä —É–Ω–∏—á—Ç–æ–∂–µ–Ω!":
		message_text = "üßÄ –°–´–† –£–ù–ò–ß–¢–û–ñ–ï–ù! üßÄ"
	else:
		message_text = "üíÄ –í–ê–° –£–ë–ò–õ–ò! üíÄ"
	
	# –°–æ–∑–¥–∞–µ–º CanvasLayer –¥–ª—è —É–≤–µ–¥–æ–º–ª–µ–Ω–∏—è
	var canvas_layer = CanvasLayer.new()
	canvas_layer.layer = 99  # –ß—É—Ç—å –Ω–∏–∂–µ –æ–∫–Ω–∞ —Ä–µ–∑—É–ª—å—Ç–∞—Ç–æ–≤ (100)
	add_child(canvas_layer)
	
	# –°–æ–∑–¥–∞–µ–º Control –Ω–∞ –≤–µ—Å—å —ç–∫—Ä–∞–Ω
	var container = Control.new()
	container.set_anchors_preset(Control.PRESET_FULL_RECT)
	container.set_offsets_preset(Control.PRESET_FULL_RECT)
	canvas_layer.add_child(container)
	
	# –°–æ–∑–¥–∞–µ–º —Å–æ–æ–±—â–µ–Ω–∏–µ
	var message = Label.new()
	message.text = message_text
	message.add_theme_font_size_override("font_size", 64)
	
	if reason == "–°—ã—Ä —É–Ω–∏—á—Ç–æ–∂–µ–Ω!":
		message.add_theme_color_override("font_color", Color(1, 0.2, 0.2))
		message.add_theme_constant_override("outline_size", 8)
		message.add_theme_color_override("font_outline_color", Color.BLACK)
	else:
		message.add_theme_color_override("font_color", Color(1, 0, 0))
		message.add_theme_constant_override("outline_size", 8)
		message.add_theme_color_override("font_outline_color", Color.BLACK)
	
	# –¶–µ–Ω—Ç—Ä–∏—Ä—É–µ–º, –Ω–æ —Å–º–µ—â–∞–µ–º –í–´–®–ï –∏ –õ–ï–í–ï–ï
	message.set_anchors_preset(Control.PRESET_CENTER)
	container.add_child(message)
	
	# –°–º–µ—â–∞–µ–º –ø–æ–ª–æ–∂–µ–Ω–∏–µ: X - –ª–µ–≤–µ–µ, Y - –≤—ã—à–µ
	var offset_x = -300  # –õ–µ–≤–µ–µ –Ω–∞ 150 –ø–∏–∫—Å–µ–ª–µ–π
	var offset_y = -100  # –í—ã—à–µ –Ω–∞ 100 –ø–∏–∫—Å–µ–ª–µ–π
	message.position += Vector2(offset_x, offset_y)
	
	# –ê–Ω–∏–º–∞—Ü–∏—è
	var tween = create_tween()
	tween.set_parallel(true)
	tween.tween_property(message, "scale", Vector2(1.5, 1.5), 0.5)
	tween.tween_property(message, "scale", Vector2(1.0, 1.0), 0.5)
	tween.tween_property(message, "modulate:a", 0, 2.0)  # –ú–µ–¥–ª–µ–Ω–Ω–µ–µ –∏—Å—á–µ–∑–∞–µ—Ç
	
	# –î–æ–ø–æ–ª–Ω–∏—Ç–µ–ª—å–Ω–∞—è –∞–Ω–∏–º–∞—Ü–∏—è - –ø–æ–∫–∞—á–∏–≤–∞–Ω–∏–µ
	var shake_tween = create_tween()
	shake_tween.tween_property(message, "position:x", message.position.x + 10, 0.1)
	shake_tween.tween_property(message, "position:x", message.position.x - 10, 0.1)
	shake_tween.tween_property(message, "position:x", message.position.x, 0.1)
	shake_tween.set_loops(3)
	
	await tween.finished
	
	# –£–¥–∞–ª—è–µ–º
	if is_instance_valid(canvas_layer):
		canvas_layer.queue_free()

func _stop_all_enemies():
	print("‚èπÔ∏è –û—Å—Ç–∞–Ω–∞–≤–ª–∏–≤–∞—é –≤—Å–µ—Ö –≤—Ä–∞–≥–æ–≤...")
	
	# 1. –û—Å—Ç–∞–Ω–∞–≤–ª–∏–≤–∞–µ–º WaveManager
	if wave_manager:
		if wave_manager.has_method("stop_waves"):
			wave_manager.stop_waves()
			print("‚èπÔ∏è WaveManager –æ—Å—Ç–∞–Ω–æ–≤–ª–µ–Ω")
		
		# –û—á–∏—â–∞–µ–º –≤—Å–µ—Ö –≤—Ä–∞–≥–æ–≤
		if wave_manager.has_method("clear_all_enemies"):
			wave_manager.clear_all_enemies()
	
	# 2. –û—Å—Ç–∞–Ω–∞–≤–ª–∏–≤–∞–µ–º —Å—É—â–µ—Å—Ç–≤—É—é—â–∏—Ö –≤—Ä–∞–≥–æ–≤
	var enemies = get_tree().get_nodes_in_group("enemies")
	for enemy in enemies:
		if is_instance_valid(enemy):
			if enemy.has_method("stop_moving"):
				enemy.stop_moving()
			elif enemy.has_method("queue_free"):
				enemy.queue_free()
	
	print("‚èπÔ∏è –û—Å—Ç–∞–Ω–æ–≤–ª–µ–Ω–æ/—É–¥–∞–ª–µ–Ω–æ –≤—Ä–∞–≥–æ–≤:", enemies.size())

func _show_results_screen():
	print("üìä –ü–æ–∫–∞–∑—ã–≤–∞—é —ç–∫—Ä–∞–Ω —Ä–µ–∑—É–ª—å—Ç–∞—Ç–æ–≤...")
	
	if arena_result:
		print("‚úÖ ArenaResult –Ω–∞–π–¥–µ–Ω –Ω–∞ —Å—Ü–µ–Ω–µ")
		
		# –ü–æ–ª—É—á–∞–µ–º –¥–∞–Ω–Ω—ã–µ –≤–æ–ª–Ω—ã
		var wave_num = 0
		if wave_manager and wave_manager.has_method("get_current_wave"):
			wave_num = wave_manager.get_current_wave()
			print("üìä –í–æ–ª–Ω–∞ –¥–ª—è –æ—Ç–æ–±—Ä–∞–∂–µ–Ω–∏—è:", wave_num)
		
		# –û–ø—Ä–µ–¥–µ–ª—è–µ–º –ø–æ–±–µ–¥–∞ –∏–ª–∏ –ø–æ—Ä–∞–∂–µ–Ω–∏–µ
		var is_victory = false
		if player and player.has_method("is_alive"):
			is_victory = player.is_alive() and great_cheese and great_cheese.current_health > 0
		
		# –í—ã–∑—ã–≤–∞–µ–º –º–µ—Ç–æ–¥ –æ—Ç–æ–±—Ä–∞–∂–µ–Ω–∏—è —Ä–µ–∑—É–ª—å—Ç–∞—Ç–æ–≤
		if arena_result.has_method("display_results"):
			print("‚úÖ –í—ã–∑—ã–≤–∞—é display_results()")
			arena_result.display_results(survival_time, wave_num, is_victory)
			print("‚úÖ display_results() –≤—ã–∑–≤–∞–Ω")
		
		# –°–∫—Ä—ã–≤–∞–µ–º UI –∞—Ä–µ–Ω—ã
		var ui = get_node_or_null("UI")
		if ui:
			ui.visible = false
			print("‚úÖ UI –∞—Ä–µ–Ω—ã —Å–∫—Ä—ã—Ç")
		
		print("‚úÖ –í—Å—ë –≥–æ—Ç–æ–≤–æ, –æ–∫–Ω–æ –¥–æ–ª–∂–Ω–æ –±—ã—Ç—å –≤–∏–¥–Ω–æ!")
	else:
		print("‚ùå ArenaResult –Ω–µ –Ω–∞–π–¥–µ–Ω –Ω–∞ —Å—Ü–µ–Ω–µ!")

func _on_wave_started(wave_num: int):
	if wave_label:
		wave_label.text = "–í–æ–ª–Ω–∞: " + str(wave_num)
		
		var tween = create_tween()
		tween.tween_property(wave_label, "scale", Vector2(1.3, 1.3), 0.2)
		tween.tween_property(wave_label, "scale", Vector2(1.0, 1.0), 0.2)
		
	print("üåä –ù–∞—á–∞–ª–∞—Å—å –≤–æ–ª–Ω–∞", wave_num)

# –î–û–ë–ê–í–õ–ï–ù–û: –ú–µ—Ç–æ–¥ –¥–ª—è –ø–æ–ª—É—á–µ–Ω–∏—è –≤—Ä–µ–º–µ–Ω–∏ –≤—ã–∂–∏–≤–∞–Ω–∏—è
func get_survival_time() -> float:
	return survival_time

# –î–û–ë–ê–í–õ–ï–ù–û: –ú–µ—Ç–æ–¥ –¥–ª—è –æ—Å—Ç–∞–Ω–æ–≤–∫–∏ –∏–≥—Ä—ã –ø—Ä–∏ —Å–º–µ—Ä—Ç–∏ –∏–≥—Ä–æ–∫–∞
func on_player_died():
	print("üèüÔ∏è –ê—Ä–µ–Ω–∞ –ø–æ–ª—É—á–∏–ª–∞ —Å–∏–≥–Ω–∞–ª –æ —Å–º–µ—Ä—Ç–∏ –∏–≥—Ä–æ–∫–∞")
	if not is_game_over:
		_end_game("–ò–≥—Ä–æ–∫ —É–º–µ—Ä")
